Array Modifer crashes Blender when Merge, Adjust Edit Cage, Start/End Cap, and Edit Mode are enabled #61816

Closed
opened 2019-02-21 19:39:34 +01:00 by Joseph Brandenburg · 8 comments

System Information
Operating system: Mac OS High Sierra 10.13.5
Graphics card: Radeon Pro 560 4GB (Blender didn't detect it, for what that's worth)

I have a Windows bot at home I can check this for later.

Blender Version
Broken:
version: 2.80 (sub 44), branch: blender2.7, commit date: 2019-02-15 14:15, hash: faa255c0a4, type: Release
build date: 2019-02-15, 16:23:20

This is a pretty specific error. Create an array modifier with an end cap, start cap, or both. Now, enable merge in the array modifier, turn on edit mode, and set the modifier to show in the edit cage (it's the fourth button in the modifier settings, at the top). Now, enter edit mode and move a vertex to merge with the end/start cap object. Blender immediately crashes to desktop.

blenderBug_000.blend
From the .blend file attatched, just enter edit mode and move some verts.

**System Information** Operating system: Mac OS High Sierra 10.13.5 Graphics card: Radeon Pro 560 4GB (Blender didn't detect it, for what that's worth) I have a Windows bot at home I can check this for later. **Blender Version** Broken: version: 2.80 (sub 44), branch: blender2.7, commit date: 2019-02-15 14:15, hash: faa255c0a4e4, type: Release build date: 2019-02-15, 16:23:20 This is a pretty specific error. Create an array modifier with an end cap, start cap, or both. Now, enable merge in the array modifier, turn on edit mode, and set the modifier to show in the edit cage (it's the fourth button in the modifier settings, at the top). Now, enter edit mode and move a vertex to merge with the end/start cap object. Blender immediately crashes to desktop. [blenderBug_000.blend](https://archive.blender.org/developer/F6680597/blenderBug_000.blend) From the .blend file attatched, just enter edit mode and move some verts.

Added subscriber: @Josephbburg

Added subscriber: @Josephbburg

Bug occurs on today's build, too.
version: 2.80 (sub 45), branch: master, commit date: 2019-02-21 14:33, hash: 8986c92b65, type: Release
build date: 2019-02-21, 15:38:00

Bug occurs on today's build, too. version: 2.80 (sub 45), branch: master, commit date: 2019-02-21 14:33, hash: 8986c92b651d, type: Release build date: 2019-02-21, 15:38:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555669db93 in bmiter__loop_of_face_begin (iter=iter@entry=0x7fffffffcb50)
    at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators.c:702
702		iter->l_first = iter->l_next = BM_FACE_FIRST_LOOP(iter->pdata);
(gdb) bt
#0  0x000055555669db93 in bmiter__loop_of_face_begin (iter=iter@entry=0x7fffffffcb50)
    at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators.c:702
#1  0x0000555556726a40 in BM_iter_init (data=0x0, itype=11 '\v', bm=0x0, iter=0x7fffffffcb50)
    at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:154
#2  BM_iter_new (data=0x0, itype=11 '\v', bm=0x0, iter=0x7fffffffcb50)
    at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:170
#3  mesh_create_edit_vertex_loops (rdata=rdata@entry=0x7fffcfa67f08, vbo_pos_nor=<optimized out>, vbo_lnor=<optimized out>, vbo_uv=vbo_uv@entry=0x0,
    vbo_data=<optimized out>, vbo_verts=<optimized out>, vbo_edges=<optimized out>, vbo_faces=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:2334
#4  0x000055555672a9fa in DRW_mesh_batch_cache_create_requested (ob=ob@entry=0x7fffe95f6c08, me=<optimized out>, ts=<optimized out>,
    is_paint_mode=<optimized out>, use_hide=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4819
#5  0x000055555677f672 in drw_batch_cache_generate_requested (ob=ob@entry=0x7fffe95f6c08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache.c:3737
#6  0x000055555672f159 in drw_engines_cache_populate (ob=0x7fffe95f6c08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1037
#7  0x00005555567305e3 in DRW_draw_render_loop_ex (depsgraph=0x7fffea011a08, engine_type=<optimized out>, ar=0x7fffcd78e5c8, v3d=0x7fffcf562508,
    viewport=0x7fffcf41bfc8, evil_C=evil_C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1493
#8  0x0000555556730b64 in DRW_draw_view (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1419
#9  0x00005555561efff7 in view3d_draw_view (ar=0x7fffcd78e5c8, C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1333
#10 view3d_main_region_draw (C=0x7fffea058188, ar=0x7fffcd78e5c8)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1354
#11 0x0000555556424599 in ED_region_do_draw (C=C@entry=0x7fffea058188, ar=ar@entry=0x7fffcd78e5c8)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:508
#12 0x000055555610c085 in wm_draw_window_offscreen (stereo=false, win=0x7fffcdabcc88, C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:573
- 13 wm_draw_window (win=0x7fffcdabcc88, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:705
- 14 wm_draw_update (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:859
- 15 0x000055555610a1c0 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:424
- 16 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555669db93 in bmiter__loop_of_face_begin (iter=iter@entry=0x7fffffffcb50) at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators.c:702 702 iter->l_first = iter->l_next = BM_FACE_FIRST_LOOP(iter->pdata); (gdb) bt #0 0x000055555669db93 in bmiter__loop_of_face_begin (iter=iter@entry=0x7fffffffcb50) at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators.c:702 #1 0x0000555556726a40 in BM_iter_init (data=0x0, itype=11 '\v', bm=0x0, iter=0x7fffffffcb50) at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:154 #2 BM_iter_new (data=0x0, itype=11 '\v', bm=0x0, iter=0x7fffffffcb50) at /home/zed/programmering/blender_master/blender/source/blender/bmesh/intern/bmesh_iterators_inline.h:170 #3 mesh_create_edit_vertex_loops (rdata=rdata@entry=0x7fffcfa67f08, vbo_pos_nor=<optimized out>, vbo_lnor=<optimized out>, vbo_uv=vbo_uv@entry=0x0, vbo_data=<optimized out>, vbo_verts=<optimized out>, vbo_edges=<optimized out>, vbo_faces=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:2334 #4 0x000055555672a9fa in DRW_mesh_batch_cache_create_requested (ob=ob@entry=0x7fffe95f6c08, me=<optimized out>, ts=<optimized out>, is_paint_mode=<optimized out>, use_hide=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4819 #5 0x000055555677f672 in drw_batch_cache_generate_requested (ob=ob@entry=0x7fffe95f6c08) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_cache.c:3737 #6 0x000055555672f159 in drw_engines_cache_populate (ob=0x7fffe95f6c08) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1037 #7 0x00005555567305e3 in DRW_draw_render_loop_ex (depsgraph=0x7fffea011a08, engine_type=<optimized out>, ar=0x7fffcd78e5c8, v3d=0x7fffcf562508, viewport=0x7fffcf41bfc8, evil_C=evil_C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1493 #8 0x0000555556730b64 in DRW_draw_view (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1419 #9 0x00005555561efff7 in view3d_draw_view (ar=0x7fffcd78e5c8, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1333 #10 view3d_main_region_draw (C=0x7fffea058188, ar=0x7fffcd78e5c8) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1354 #11 0x0000555556424599 in ED_region_do_draw (C=C@entry=0x7fffea058188, ar=ar@entry=0x7fffcd78e5c8) at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:508 #12 0x000055555610c085 in wm_draw_window_offscreen (stereo=false, win=0x7fffcdabcc88, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:573 - 13 wm_draw_window (win=0x7fffcdabcc88, C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:705 - 14 wm_draw_update (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:859 - 15 0x000055555610a1c0 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:424 - 16 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```
Bastien Montagne was assigned by Sebastian Parborg 2019-02-22 12:31:24 +01:00
Bastien Montagne removed their assignment 2019-03-05 13:51:18 +01:00
Clément Foucault was assigned by Bastien Montagne 2019-03-05 13:51:18 +01:00

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29

Not sure this is for me, crash happens in draw code (mesh_create_edit_vertex_loops()), when trying to iter over the loops of a BMFace pointer that is NULL. Don’t really know the logic of that code, so cannot judge where is the error (isefa supposed to never be NULL here?), so will let @fclem check on that first.

Not sure this is for me, crash happens in draw code (`mesh_create_edit_vertex_loops()`), when trying to iter over the loops of a BMFace pointer that is NULL. Don’t really know the logic of that code, so cannot judge where is the error (is`efa` supposed to never be NULL here?), so will let @fclem check on that first.
Clément Foucault was unassigned by Jeroen Bakker 2019-03-22 14:30:31 +01:00
Jeroen Bakker self-assigned this 2019-03-22 14:30:31 +01:00

This issue was referenced by fcff2a5751

This issue was referenced by fcff2a57518ffaf509be7a3bdb57e7e9ff8f85b5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61816
No description provided.