Fix T61816: Crash No Face Index Array Modifier

Differential Revision: https://developer.blender.org/D4576